# Mystery_Design_Studio

./: .gitignore  CMakeLists.txt  README  README.md  common.h  device.cpp  device.h  device.ui  form.cpp  form.h  form.ui  highlight.cpp  highlight.h  icons.qrc  import.cpp  import.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfile.cpp  newfile.h  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  newfolderdialog.cpp  newfolderdialog.h  newfolderdialog.ui  openfolderui.cpp  openfolderui.h  srceditor.cpp  srceditor.h
devices/: ide.xml  le0.xml
